--- a/less/contact.less
+++ b/less/contact.less
@@ -1,6 +1,6 @@
 #contact-container {
   background: @red;
-  width: @main-width;
+  width: 100%;
   margin: 0 auto;
 
   @media @tablet {
@@ -78,7 +78,7 @@
         transition: 1s;
 
         @media @tablet {
-          width: 90%;
+          width: 85%;
           margin-left: 0;
         }
 
